--- a/src/bp/Makefile.am
+++ b/src/bp/Makefile.am
@@ -28,20 +28,113 @@ SRCS =\
 include $(top_srcdir)/Conditionals.am
 include $(top_srcdir)/Maketa.am
 
-bin_PROGRAMS = bp++
-bp___SOURCES = $(HEADS) $(SRCS)
-bp___LDADD =\
-	$(abs_top_builddir)/src/pdp/libpdp.la \
-	$(abs_top_builddir)/src/tamisc/libtamisc.la \
-	$(abs_top_builddir)/src/ta/libta.la \
-	$(abs_top_builddir)/src/css/libcss.la
+bin_PROGRAMS = bp@PDP_SUFFIX@++
+bp@PDP_SUFFIX@___SOURCES = $(HEADS) $(SRCS)
+bp@PDP_SUFFIX@___LDADD =\
+	$(abs_top_builddir)/src/pdp/libpdp@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/tamisc/libtamisc@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/ta/libta@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/css/libcss@PDP_SUFFIX@.la
 
+bp@PDP_SUFFIX@___LDFLAGS =
+bp@PDP_SUFFIX@___CXXFLAGS =
 
+bp@PDP_SUFFIX@___CPPFLAGS =\
+	-I@srcdir@/../ta \
+	-I@srcdir@/../pdp \
+	-I@srcdir@/../tamisc \
+	-I@srcdir@/../css
+
+BUILT_SOURCES = bp_TA_type.h bp_TA_inst.h bp_TA.cpp
+
+#**************************************************
+#
+#                      GUI
+#
+#**************************************************
 if TA_GUI
-bp___LDADD += $(abs_top_builddir)/src/taiqtso/libtaiqtso.la
+bp@PDP_SUFFIX@___LDADD += $(abs_top_builddir)/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
+
+bp@PDP_SUFFIX@___LDADD +=\
+	$(abs_top_builddir)/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la \
+	@X_EXTRA_LIBS@ \
+	@X_PRE_LIBS@ \
+	@QT_LDADD@
+	
+bp@PDP_SUFFIX@___LDFLAGS += @X_LIBS@
+
+bp@PDP_SUFFIX@___CPPFLAGS +=\
+	-I@srcdir@/../taiqtso \
+	@X_CFLAGS@ \
+	-I/usr/include/freetype2 \
+	@QT_CXXFLAGS@ \
+	-DTA_GUI \
+	-DTA_USE_QT \
+	-DTA_USE_INVENTOR \
+	-DQT_SHARED
+
+bp@PDP_SUFFIX@___LDFLAGS += @X_LIBS@
+
+endif
+#**************************************************
+#
+#                      NOGUI
+#
+#**************************************************
+if NO_TA_GUI
+
+bp@PDP_SUFFIX@___CPPFLAGS += -DTA_NO_GUI
+
+endif
+#**************************************************
+#
+#                      DEBUG
+#
+#**************************************************
+if DEBUG
+
+bp@PDP_SUFFIX@___CPPFLAGS +=\
+	-DYYDEBUG \
+	-DDEBUG \
+	-DTA_PROFILE \
+	-DHAVE_POSIX_SIGNALS=1 \
+	-DRETSIGTYPE=void
+
+bp@PDP_SUFFIX@___CXXFLAGS += -Wno-non-virtual-dtor
+
+endif
+#**************************************************
+#
+#                      MPI
+#
+#**************************************************
+if MPI
+
+bp@PDP_SUFFIX@___CPPFLAGS += -DDMEM_COMPILE
+
+endif
+#**************************************************
+#
+#                      LINUX
+#
+#**************************************************
+if LINUX
+
+bp@PDP_SUFFIX@___CPPFLAGS += -DLINUX
+
+endif
+#**************************************************
+#
+#                      DARWIN
+#
+#**************************************************
+if DARWIN
+
+bp@PDP_SUFFIX@___CPPFLAGS += -DLINUX -DDARWIN
+
 endif
 
-bp___LDFLAGS = $(LINKER_FLAGS) $(GUI_LINKER_FLAGS)
-bp___CPPFLAGS = $(PREPROCESSOR_FLAGS) $(GUI_PREPROCESSOR_FLAGS)
-bp___CFLAGS = $(COMPILER_FLAGS) $(GUI_COMPILER_FLAGS)
-BUILT_SOURCES = bp_TA_type.h bp_TA_inst.h bp_TA.cpp
+clean-local:
+	-rm *TA*
+	-rm *moc*
+	-rm *~
