--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -8,8 +8,6 @@ VPATH = @srcdir@
 
 if TA_GUI
 
-ta_type_qt.cpp: ta_type.h
-
 TAHEADS_GUI =\
 	@abs_srcdir@/ta_qt.h \
 	@abs_srcdir@/ta_qtdata_def.h \
@@ -121,14 +119,106 @@ SRCS =\
 	ta_TA.cpp \
 	ta_ti.cpp
 
-include $(top_srcdir)/Conditionals.am
 include $(top_srcdir)/Maketa.am
-MAKETA_FLAGS += $(libta_la_CPPFLAGS)
+MAKETA_FLAGS += $(libta@PDP_SUFFIX@_la_CPPFLAGS)
 include $(top_srcdir)/Moc.am
 
-lib_LTLIBRARIES = libta.la
-libta_la_SOURCES = $(SRCS) $(HEADS)
-libta_la_LDFLAGS = $(LINKER_FLAGS) $(GUI_LINKER_FLAGS)
-libta_la_CPPFLAGS = $(PREPROCESSOR_FLAGS) $(GUI_PREPROCESSOR_FLAGS) -DTA_USE_QT
-libta_la_CFLAGS = $(COMPILER_FLAGS) $(GUI_COMPILER_FLAGS)
-BUILT_SOURCES = ta_TA_type.h ta_TA_inst.h
+lib_LTLIBRARIES = libta@PDP_SUFFIX@.la
+libta@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
+
+libta@PDP_SUFFIX@_la_CPPFLAGS = -I@srcdir@/../css
+
+libta@PDP_SUFFIX@_la_CXXFLAGS =
+
+BUILT_SOURCES = ta_TA_type.h ta_TA_inst.h ta_TA.cpp
+
+#**************************************************
+#
+#                      GUI
+#
+#**************************************************
+if TA_GUI
+
+libta@PDP_SUFFIX@_la_LIBADD =\
+	@X_EXTRA_LIBS@ \
+	@X_PRE_LIBS@ \
+	@QT_LDADD@
+	
+libta@PDP_SUFFIX@_la_LDFLAGS = @X_LIBS@
+
+libta@PDP_SUFFIX@_la_CPPFLAGS +=\
+	-I@srcdir@/../taiqtso \
+	@X_CFLAGS@ \
+	-I/usr/include/freetype2 \
+	@QT_CXXFLAGS@ \
+	-DTA_GUI \
+	-DTA_USE_QT \
+	-DTA_USE_INVENTOR \
+	-DQT_SHARED
+
+libta@PDP_SUFFIX@_la_LDFLAGS += @X_LIBS@
+
+endif
+#**************************************************
+#
+#                      NOGUI
+#
+#**************************************************
+if NO_TA_GUI
+
+libta@PDP_SUFFIX@_la_CPPFLAGS += -DTA_NO_GUI
+
+
+endif
+#**************************************************
+#
+#                      DEBUG
+#
+#**************************************************
+if DEBUG
+
+libta@PDP_SUFFIX@_la_CPPFLAGS +=\
+	-DYYDEBUG \
+	-DDEBUG \
+	-DTA_PROFILE \
+	-DHAVE_POSIX_SIGNALS=1 \
+	-DRETSIGTYPE=void
+
+libta@PDP_SUFFIX@_la_CXXFLAGS += -Wno-non-virtual-dtor
+
+endif
+#**************************************************
+#
+#                      MPI
+#
+#**************************************************
+if MPI
+
+libta@PDP_SUFFIX@_la_CPPFLAGS += -DDMEM_COMPILE
+
+endif
+#**************************************************
+#
+#                      LINUX
+#
+#**************************************************
+if LINUX
+
+libta@PDP_SUFFIX@_la_CPPFLAGS += -DLINUX
+
+endif
+#**************************************************
+#
+#                      DARWIN
+#
+#**************************************************
+if DARWIN
+
+libta@PDP_SUFFIX@_la_CPPFLAGS += -DLINUX -DDARWIN
+
+endif
+
+clean-local:
+	-rm *TA*
+	-rm *moc*
+	-rm *~
