--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -57,6 +57,8 @@ TAHEADS =\
 	@abs_srcdir@/tdgeometry.h \
 	@abs_srcdir@/aggregate.h \
 	@abs_srcdir@/minmax.h \
+	@abs_srcdir@/ta_data_defs.h \
+	@abs_srcdir@/ta_data.h \
 	@abs_srcdir@/colorscale.h \
 	@abs_srcdir@/datatable.h \
 	@abs_srcdir@/datagraph.h \
@@ -73,6 +75,8 @@ HEADS =\
 	tdgeometry.h \
 	aggregate.h \
 	minmax.h \
+	ta_data_defs.h \
+	ta_data.h \
 	colorscale.h \
 	datatable.h \
 	datagraph.h \
@@ -84,6 +88,7 @@ SRCS =\
 	tdgeometry.cpp \
 	aggregate.cpp \
 	minmax.cpp \
+	ta_data.cpp \
 	colorscale.cpp \
 	datatable.cpp \
 	datagraph.cpp \
