--- a/configure.ac
+++ b/configure.ac
@@ -3,134 +3,150 @@
 # Process this file with autoconf to produce a configure script.
 #*************************************************************
 #
-
 AC_PREREQ(2.59)
 AC_INIT([PDP],[4.0],[pdp-discuss@psych-srv3.Colorado.EDU])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([-Wall -Werror])
+PDP_DETERMINE_OSTYPE
 AC_DISABLE_SHARED
 
 # Hack to stop fortran checks in configure
 # See: http://lists.gnu.org/archive/html/libtool/2005-09/msg00097.html
 m4_undefine([AC_PROG_F77])
 m4_defun([AC_PROG_F77],[])
+
 AC_PROG_LIBTOOL
-
-PDP_DETERMINE_OSTYPE
-
-#AC_CONFIG_SRCDIR([src/taglobal.h])
-
-#                                             debug, mpi, gui
+#                                                  gui enabled
 #*************************************************************
-#          Enables/disables debugging, mpi, gui
+#             Things to do if --enable-gui is set
 #*************************************************************
 #
-
-AC_ARG_ENABLE([debug],
-              AC_HELP_STRING([--enable-debug],
-                             [Enable debugging. Default is disabled.]),
-                             [debug=true],
-                             [debug=false])
-AC_ARG_ENABLE([mpi],
-              AC_HELP_STRING([--enable-mpi],
-                             [Enable the Message Passing Interface. Default is disabled.]),
-                             [mpi=true],
-                             [mpi=false])
 AC_ARG_ENABLE([gui],
               AC_HELP_STRING([--disable-gui],
                              [Disable compiling with a GUI. Default is enabled]),
                              [gui=false],
                              [gui=true])
 
-AM_CONDITIONAL([DEBUG],[test $debug = true])
-AM_CONDITIONAL([MPI],[test $mpi = true])
 AM_CONDITIONAL([TA_GUI],[test $gui = true])
 AM_CONDITIONAL([NO_TA_GUI],[test $gui = false])
 
-PDP_DETERMINE_SUFFIX
-
-if test $gui = true; then
-	AC_SUBST([WANT_TAIQTSO],[src/taiqtso])
+if test $gui = true; then	
+  gw_CHECK_QT
+  AC_HAVE_LIBRARY([Coin],[LIBS="$LIBS -lCoin"],[AC_MSG_WARN([--enable-gui set but unable to find libCoin.])])
+  AC_HAVE_LIBRARY([GLU], [LIBS="$LIBS -lGLU"],[AC_MSG_WARN([--enable-gui set but unable to find libGLU.])])
+  AC_HAVE_LIBRARY([GL], [LIBS="$LIBS -lGL"],[AC_MSG_WARN([--enable-gui set but unable to find libGL.])])
+  AC_HAVE_LIBRARY([jpeg], [LIBS="$LIBS -ljpeg"],[AC_MSG_WARN([--enable-gui set but unable to find libjpeg.])])
+  AC_HAVE_LIBRARY([SoQt], [LIBS="$LIBS -lSoQt"],[AC_MSG_WARN([--enable-gui set but unable to find libSoQt.])])
+  AC_DEFINE([TA_GUI],
+            [1],
+            [Complementary switches, set when compiling for gui/no gui. Controls all non-QtCore related dependencies. For nogui, there can be no Coin or non-QtCore dependencies.])
+  AC_DEFINE([TA_USE_QT],
+            [1],
+            [This switch is set when linking with Qt. NOTE: THIS FLAG DOES NOT INDICATE GUI -- ex. ta is compiled with the QtCore library, even for the non-gui version of the program])
+  AC_DEFINE([TA_USE_INVENTOR],
+            [1],
+            [This switch is set when compiling for gui and linking with Coin. This switch is really only used in the lowest level files. NOTE: Coin/Inventor is never used when building nogui.])
+  AC_DEFINE([QT_SHARED],
+            [1],
+            [Note from Brian: This switch is here, i'm not quite sure why. Used in qglobal.h.])
+  # Tells top-level makefile.am to recurse through src/taiqtso
+  AC_SUBST([WANT_TAIQTSO],[src/taiqtso])
+  # These libraries are substitued in the makefiles.
+  LIBS="$LIBS $X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS $QT_LDADD"
+  AC_SUBST([QT_CXXFLAGS])
+  AC_SUBST([QT_GUILINK])
+  AC_SUBST([X_CFLAGS])
 fi
-
-#                                                     programs
+#                                                  mpi enabled
 #*************************************************************
-#          Checks for specific programs
+#             Things to do if --enable-mpi is set
 #*************************************************************
 #
+AC_ARG_ENABLE([mpi],
+              AC_HELP_STRING([--enable-mpi],
+                             [Enable the Message Passing Interface. Default is disabled.]),
+                             [mpi=true],
+                             [mpi=false])
 
+AM_CONDITIONAL([MPI],[test $mpi = true])
+
+if test $mpi = true; then
+  ACX_MPI([],[AC_MSG_ERROR([unable to locate the Message Passing Interface])])
+  ACX_PTHREAD([],[AC_MSG_ERROR([unable to locate pthread])])
+  AC_DEFINE([DMEM_COMPILE],[1],[Causes mpi.h to be included])
+fi
+
+# use the mpi compiler, if defined
+if test $MPICC != x; then
+	CXX="$MPICXX"
+fi
+#                                                debug enabled
+#*************************************************************
+#             Things to do if --enable-debug is set
+#*************************************************************
+#
+AC_ARG_ENABLE([debug],
+              AC_HELP_STRING([--enable-debug],
+                             [Enable debugging. Default is disabled.]),
+                             [debug=true],
+                             [debug=false])
+
+AM_CONDITIONAL([DEBUG],[test $debug = true])
+
+if $debug = true; then
+  AC_DEFINE([YYDEBUG],[1],[debugging])
+  AC_DEFINE([DEBUG],[1],[debugging])
+  AC_DEFINE([TA_PROFILE],[1],[debugging])
+  AC_DEFINE([RETSIGTYPE],[void],[debugging])
+fi
+#                                                     programs
+#*************************************************************
+#              Checks for specific programs
+#*************************************************************
+#
 AC_PROG_AWK
 AC_PROG_YACC
 AC_PROG_LEX
+
+# GNU C++ compiler is mandatory
 AC_PROG_CXX
-AC_PROG_CC([gcc])
-
-# GNU C Compiler Collection is mandatory
-AC_MSG_CHECKING([for the GNU C Compiler Collection])
-if test $GCC != yes; then
-	AC_MSG_ERROR([GNU C Compiler Collection not detected],[1])
+AC_MSG_CHECKING([for GNU C++ compiler])
+if test $GXX != yes; then
+  AC_MSG_ERROR([GNU C++ compiler not detected])
 fi
-AC_MSG_RESULT([$GCC])
-
-# GNU Make is mandatory. CHECK_GNU_MAKE is a custom macro that
-# warns if it is not available
-AC_PROG_MAKE_SET
-CHECK_GNU_MAKE
-
+AC_MSG_RESULT([$GXX])
 #                                                      headers
 #*************************************************************
 #              Checks for specific headers
 #*************************************************************
 #
-if test $gui = true; then
-	AC_PATH_XTRA
-fi
 AC_FUNC_ALLOCA
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([fcntl.h float.h limits.h locale.h malloc.h memory.h stddef.h stdlib.h string.h sys/time.h unistd.h])
-
 #                                              typedef, struct
 #*************************************************************
 #  Checks for typedefs, structures, compiler characteristics
 #*************************************************************
 #
 AC_HEADER_STDBOOL
+AC_HEADER_TIME
 AC_C_CONST
 AC_C_INLINE
-AC_TYPE_PID_T
 AC_C_RESTRICT
-AC_TYPE_SIZE_T
-AC_HEADER_TIME
 AC_C_VOLATILE
-
+AC_TYPE_SIGNAL
+AC_TYPE_SIZE_T
+AC_TYPE_PID_T
 #                                                    libraries
 #*************************************************************
 #                     Checks for libraries
 #*************************************************************
 #
-
-# Always check for Qt, since tamisc always uses it.
-
-if test $gui = true; then
-	gw_CHECK_QT
-	AC_CHECK_LIB([Coin], [main])
-	AC_CHECK_LIB([GLU], [main])
-	AC_CHECK_LIB([GL], [main])
-	AC_CHECK_LIB([jpeg], [main])
-	AC_CHECK_LIB([SoQt], [main])
-fi
-
-if test $mpi = true; then
-	ACX_MPI([],[])
-fi
-
-AC_CHECK_LIB([dl], [main])
-AC_CHECK_LIB([pthread], [main])
-AC_CHECK_LIB([readline], [main],[],[VL_LIB_READLINE])
-AC_CHECK_LIB([z], [main])
-
+AC_HAVE_LIBRARY([dl],[LIBS="$LIBS -ldl"],[AC_MSG_WARN([unable to find libdl for Dynamic Loader Function Interfaces. Build may fail.])])
+AC_HAVE_LIBRARY([readline], [LIBS="$LIBS -ldl"],[VL_LIB_READLINE]) # VL_LIB_READLINE is a souped up readline check
+AC_HAVE_LIBRARY([z],[LIBS="$LIBS -lz"],[AC_MSG_WARN([unable to find libz compression library. Build may fail.])])
 #                                            library functions
 #*************************************************************
 #                Checks for library functions
@@ -146,7 +162,6 @@ AC_TYPE_SIGNAL
 AC_FUNC_STAT
 AC_FUNC_STRTOD
 AC_CHECK_FUNCS([alarm floor getcwd gettimeofday memmove memset pow putenv rmdir select setlocale sqrt strcasecmp strtol])
-
 #                                                  @variables@
 #*************************************************************
 #            Substitutes @variables@ in Makefile.am's
@@ -154,40 +169,23 @@ AC_CHECK_FUNCS([alarm floor getcwd gettimeofday memmove memset pow putenv rmdir 
 # @reference@ to a substitution that comes after.
 #*************************************************************
 #
-
-AC_SUBST([QT_CXXFLAGS])
-AC_SUBST([X_LIBS])
-AC_SUBST([X_EXTRA_LIBS])
-AC_SUBST([X_PRE_LIBS])
-AC_SUBST([QT_LDADD])
-AC_SUBST([QT_GUILINK])
-AC_SUBST([X_CFLAGS])
-
 AC_SUBST([abs_top_builddir])
-AC_SUBST([abs_srcdir])
-AC_SUBST([includedir])
 AC_SUBST([abs_srcdir])
 AC_SUBST([srcdir])
 AC_SUBST([top_srcdir])
-
-AC_SUBST(QT_CXXFLAGS)
-AC_SUBST(QT_LDADD)
-AC_SUBST(QT_GUILINK)
-
 #                                                       output
 #*************************************************************
 #                 Creation of the build system
 #*************************************************************
 #
-
+PDP_DETERMINE_SUFFIX
 AC_CONFIG_FILES([Makefile
-		src/maketa/Makefile
-		src/taiqtso/Makefile
-		src/ta/Makefile
-		src/css/Makefile
-		src/tamisc/Makefile
-		src/pdp/Makefile
-		src/leabra/Makefile
-		src/bp/Makefile])
-
+                src/maketa/Makefile
+                src/taiqtso/Makefile
+                src/ta/Makefile
+                src/css/Makefile
+                src/tamisc/Makefile
+                src/pdp/Makefile
+                src/leabra/Makefile
+                src/bp/Makefile])
 AC_OUTPUT
