--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -58,22 +58,19 @@ SUFFIXES = .moc.cpp
 
 lib_LTLIBRARIES = libcss@PDP_SUFFIX@.la
 libcss@PDP_SUFFIX@_la_SOURCES = $(HEADS) $(SRCS)
-libcss@PDP_SUFFIX@_la_CPPFLAGS =\
-	-I$(srcdir)/../ta
+libcss@PDP_SUFFIX@_la_CPPFLAGS = -I$(srcdir)/../ta
+libcss@PDP_SUFFIX@_la_LDFLAGS = @X_LIBS@
+libcss@PDP_SUFFIX@_la_CXXFLAGS = @X_CFLAGS@ @QT_CXXFLAGS@
+libcss@PDP_SUFFIX@_la_LIBADD = @MPILIBS@
 
 bin_PROGRAMS = css@PDP_SUFFIX@++
 css@PDP_SUFFIX@___SOURCES = main.cpp
 css@PDP_SUFFIX@___LDADD =\
 	libcss@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la
-
-libcss@PDP_SUFFIX@_la_LIBADD = @MPILIBS@
-
 css@PDP_SUFFIX@___LDFLAGS = $(libcss@PDP_SUFFIX@_la_LDFLAGS)
 css@PDP_SUFFIX@___CPPFLAGS = $(libcss@PDP_SUFFIX@_la_CPPFLAGS)
 css@PDP_SUFFIX@___CXXFLAGS = $(libcss@PDP_SUFFIX@_la_CXXFLAGS)
-
-AM_CXXFLAGS = -fno-implicit-templates
 
 #**************************************************
 #
@@ -84,16 +81,10 @@ if TA_GUI
 
 css@PDP_SUFFIX@___LDADD += @abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
 
-libcss@PDP_SUFFIX@_la_LIBADD += @X_EXTRA_LIBS@ @X_PRE_LIBS@ @QT_LDADD@
-
-libcss@PDP_SUFFIX@_la_LDFLAGS = @X_LIBS@
-
 libcss@PDP_SUFFIX@_la_CPPFLAGS +=\
 	-I../src/taiqtso \
 	-I@srcdir@/../taiqtso \
-	@X_CFLAGS@ \
 	-I/usr/include/freetype2 \
-	@QT_CXXFLAGS@ \
 	-DTA_GUI \
 	-DTA_USE_QT \
 	-DTA_USE_INVENTOR \
@@ -121,8 +112,7 @@ libcss@PDP_SUFFIX@_la_CPPFLAGS +=\
 	-DYYDEBUG \
 	-DDEBUG \
 	-DTA_PROFILE \
-	-DHAVE_POSIX_SIGNALS=1 \
-	-DRETSIGTYPE=void
+	-DHAVE_POSIX_SIGNALS=1
 
 endif
 #**************************************************
