--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -103,16 +103,12 @@ include $(top_srcdir)/Moc.am
 
 lib_LTLIBRARIES = libtamisc@PDP_SUFFIX@.la
 libtamisc@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
-
-libtamisc@PDP_SUFFIX@_la_LIBADD = @MPILIBS@
-
+libtamisc@PDP_SUFFIX@_la_LIBADD = @MPILIBS@ @PTHREAD_LIBS@
 libtamisc@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../ta \
 	-I@srcdir@/../css
-
-libtamisc@PDP_SUFFIX@_la_CXXFLAGS =
-
-AM_CXXFLAGS = -fno-implicit-templates
+libtamisc@PDP_SUFFIX@_la_LDFLAGS = @X_LIBS@
+libtamisc@PDP_SUFFIX@_la_CXXFLAGS = @PTHREAD_CFLAGS@ @X_CFLAGS@ @QT_CXXFLAGS@
 
 BUILT_SOURCES = tamisc_TA_type.h tamisc_TA_inst.h tamisc_TA.cpp
 
@@ -123,24 +119,13 @@ BUILT_SOURCES = tamisc_TA_type.h tamisc_TA_inst.h tamisc_TA.cpp
 #**************************************************
 if TA_GUI
 
-libtamisc@PDP_SUFFIX@_la_LIBADD +=\
-	@X_EXTRA_LIBS@ \
-	@X_PRE_LIBS@ \
-	@QT_LDADD@
-
-libtamisc@PDP_SUFFIX@_la_LDFLAGS = @X_LIBS@
-
 libtamisc@PDP_SUFFIX@_la_CPPFLAGS +=\
 	-I@srcdir@/../taiqtso \
-	@X_CFLAGS@ \
 	-I/usr/include/freetype2 \
-	@QT_CXXFLAGS@ \
 	-DTA_GUI \
 	-DTA_USE_QT \
 	-DTA_USE_INVENTOR \
 	-DQT_SHARED
-
-libtamisc@PDP_SUFFIX@_la_LDFLAGS += @X_LIBS@
 
 endif
 #**************************************************
@@ -163,9 +148,7 @@ if DEBUG
 libtamisc@PDP_SUFFIX@_la_CPPFLAGS +=\
 	-DYYDEBUG \
 	-DDEBUG \
-	-DTA_PROFILE \
-	-DHAVE_POSIX_SIGNALS=1 \
-	-DRETSIGTYPE=void
+	-DTA_PROFILE
 
 libtamisc@PDP_SUFFIX@_la_CXXFLAGS += -Wno-non-virtual-dtor
 
