--- a/src/leabra/Makefile.am
+++ b/src/leabra/Makefile.am
@@ -32,16 +32,14 @@ leabra@PDP_SUFFIX@___LDADD =\
 	$(abs_top_builddir)/src/tamisc/libtamisc@PDP_SUFFIX@.la \
 	$(abs_top_builddir)/src/ta/libta@PDP_SUFFIX@.la \
 	$(abs_top_builddir)/src/css/libcss@PDP_SUFFIX@.la
-
+leabra@PDP_SUFFIX@___LDFLAGS = @X_LIBS@
 leabra@PDP_SUFFIX@___CPPFLAGS =\
 	-I@srcdir@/../ta \
 	-I@srcdir@/../pdp \
 	-I@srcdir@/../tamisc \
 	-I@srcdir@/../css
 
-leabra@PDP_SUFFIX@___CXXFLAGS =
-
-AM_CXXFLAGS = -fno-implicit-templates
+leabra@PDP_SUFFIX@___CXXFLAGS = @PTHREAD_CFLAGS@ @X_CFLAGS@ @QT_CXXFLAGS@
 
 BUILT_SOURCES = leabra_TA_type.h leabra_TA_inst.h leabra_TA.cpp
 
@@ -53,24 +51,15 @@ BUILT_SOURCES = leabra_TA_type.h leabra_TA_inst.h leabra_TA.cpp
 if TA_GUI
 
 leabra@PDP_SUFFIX@___LDADD +=\
-	$(abs_top_builddir)/src/taiqtso/libtaiqtso.la \
-	@X_EXTRA_LIBS@ \
-	@X_PRE_LIBS@ \
-	@QT_LDADD@
-
-leabra@PDP_SUFFIX@___LDFLAGS = @X_LIBS@
+	$(abs_top_builddir)/src/taiqtso/libtaiqtso@PDP_SUFFIX@.la
 
 leabra@PDP_SUFFIX@___CPPFLAGS +=\
 	-I@srcdir@/../taiqtso \
-	@X_CFLAGS@ \
 	-I/usr/include/freetype2 \
-	@QT_CXXFLAGS@ \
 	-DTA_GUI \
 	-DTA_USE_QT \
 	-DTA_USE_INVENTOR \
 	-DQT_SHARED
-
-leabra@PDP_SUFFIX@___LDFLAGS += @X_LIBS@
 
 endif
 #**************************************************
@@ -94,8 +83,7 @@ leabra@PDP_SUFFIX@___CPPFLAGS +=\
 	-DYYDEBUG \
 	-DDEBUG \
 	-DTA_PROFILE \
-	-DHAVE_POSIX_SIGNALS=1 \
-	-DRETSIGTYPE=void
+	-DHAVE_POSIX_SIGNALS=1
 
 leabra@PDP_SUFFIX@___CXXFLAGS += -Wno-non-virtual-dtor
 
