--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,8 @@
 # If you remove/add one of SUBDIRS, be sure to
 # do the same at the bottom of configure.ac
 
+dist_pkgdata_DATA = AUTHORS ChangeLog COPYING COPYING.LIB INSTALL NEWS README
+
 DIST_SUBDIRS =src/maketa src/taiqtso src/ta src/css src/tamisc src/pdp src/leabra src/bp
 SUBDIRS = src/maketa @WANT_TAIQTSO@ src/ta src/css src/tamisc src/pdp src/leabra src/bp
 
